--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
 
 add_library(graph_cuts
-    LinkedBlockList.h
-    graph.h
-    GCoptimization.h
-    energy.h
-    block.h
-    maxflow.cpp
-    LinkedBlockList.cpp
-    graph.cpp
-    GCoptimization.cpp)
+            STATIC
+            LinkedBlockList.h
+            graph.h
+            GCoptimization.h
+            energy.h
+            block.h
+            LinkedBlockList.cpp
+            GCoptimization.cpp)
